// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verify validateForm respects Permission Settings: Don't strip permbool because admin is permitted 1`] = `
Object {
  "guestName": "asdf",
  "permbool": true,
}
`;

exports[`Verify validateForm respects Permission Settings: Strip permbool because not permitted 1`] = `
Object {
  "guestName": "asdf",
}
`;

exports[`Verify validateForm respects Permission Settings: strip permbool because for update only server is permitted 1`] = `
Object {
  "guestName": "asdf",
}
`;
